# src/shared/infra/http/routes/authenticate.routes.ts
@@ -1,11 +1,11 @@
-import { AuthenticateUserController } from "@modules/accounts/useCases/authenticateUser/AuthenticateUserController";
-import { Router } from "express";
+import { Router } from 'express';
 
+import { AuthenticateUserController } from '@modules/accounts/useCases/authenticateUser/AuthenticateUserController';
 
 const authenticateRoutes = Router();
 
 const authenticateUserController = new AuthenticateUserController();
 
-authenticateRoutes.post("/sessions", authenticateUserController.handle);
+authenticateRoutes.post('/sessions', authenticateUserController.handle);
 
-export { authenticateRoutes }
+export { authenticateRoutes };
