# src/shared/infra/http/routes/index.ts
@@ -1,20 +1,19 @@
-import { Router } from "express";
-import { authenticateRoutes } from "./authenticate.routes";
+import { Router } from 'express';
+import { authenticateRoutes } from './authenticate.routes';
 
-import { categoriesRoutes } from "./categories.routes";
-import { specificationsRoutes } from "./specifications.routes";
-import { usersRoutes } from "./users.routes";
-import { carsRoutes } from "./cars.routes";
-
-
+import { categoriesRoutes } from './categories.routes';
+import { specificationsRoutes } from './specifications.routes';
+import { usersRoutes } from './users.routes';
+import { carsRoutes } from './cars.routes';
+import { rentalRoutes } from './rental.routes';
 
 const router = Router();
 
-router.use("/categories", categoriesRoutes);
-router.use("/specifications", specificationsRoutes);
-router.use("/users", usersRoutes);
-router.use("/cars", carsRoutes);
+router.use('/categories', categoriesRoutes);
+router.use('/specifications', specificationsRoutes);
+router.use('/users', usersRoutes);
+router.use('/cars', carsRoutes);
+router.use('/rentals', rentalRoutes);
 router.use(authenticateRoutes);
 
-
-export { router }
+export { router };
