# src/swagger.json
@@ -1,21 +1,20 @@
 {
     "openapi": "3.0.0",
     "info": {
-        "title": "Rentx Documentation",
+        "title": "RentX Documentation",
         "description": "This is an API Rent",
-        "Versiom": "1.0.0",
+        "version": "1.0.0",
         "contact": {
-            "email": "Medradofake@rocketseat.com.br"
+            "email": "medradoogabriel@gmail.com"
         }
     },
     "paths": {
         "/categories": {
             "post": {
-                "tags": [
-                    "Category"
-                ],
+                "tags": ["Category"],
                 "summary": "Create a category",
                 "description": "Create a new category",
+                "security": [{ "bearerAuth": [] }],
                 "requestBody": {
                     "content": {
                         "application/json": {
@@ -30,7 +29,7 @@
                                     }
                                 },
                                 "example": {
-                                    "name": "Category name sample",
+                                    "name": "category name sample",
                                     "description": "Category description sample"
                                 }
                             }
@@ -42,19 +41,17 @@
                         "description": "Created"
                     },
                     "500": {
-                        "description": "Category already exists!"
+                        "description": "Category already exists"
                     }
                 }
             },
             "get": {
-                "tags": [
-                    "Category"
-                ],
+                "tags": ["Category"],
                 "summary": "List all categories",
                 "description": "List all categories",
                 "responses": {
                     "200": {
-                        "description": "Sucess",
+                        "description": "Success",
                         "content": {
                             "application/json": {
                                 "schema": {
@@ -79,11 +76,10 @@
         },
         "/categories/import": {
             "post": {
-                "tags": [
-                    "Category"
-                ],
+                "tags": ["Category"],
                 "summary": "Upload a new category",
                 "description": "Upload a new category",
+                "security": [{ "bearerAuth": [] }],
                 "requestBody": {
                     "content": {
                         "multipart/form-data": {
@@ -108,11 +104,10 @@
         },
         "/specifications": {
             "post": {
-                "tags": [
-                    "Specifications"
-                ],
+                "tags": ["Specifications"],
                 "summary": "Create a specification",
                 "description": "Create a new specification",
+                "security": [{ "bearerAuth": [] }],
                 "requestBody": {
                     "content": {
                         "application/json": {
@@ -131,6 +126,105 @@
                     }
                 }
             }
+        },
+        "/sessions": {
+            "post": {
+                "tags": ["Session"],
+                "summary": "Authentication user",
+                "description": "Authentication user",
+                "requestBody": {
+                    "content": {
+                        "application/json": {
+                            "schema": {
+                                "type": "object",
+                                "properties": {
+                                    "email": {
+                                        "type": "string"
+                                    },
+                                    "password": {
+                                        "type": "string"
+                                    }
+                                }
+                            }
+                        }
+                    }
+                },
+                "responses": {
+                    "200": {
+                        "description": "Success"
+                    },
+                    "400": {
+                        "description": "Email or password incorrect!"
+                    }
+                }
+            }
+        },
+        "/cars": {
+            "post": {
+                "tags": ["Cars"],
+                "summary": "Create a new car",
+                "description": "Create a new car",
+                "security": [{ "bearerAuth": [] }],
+                "requestBody": {
+                    "content": {
+                        "application/json": {
+                            "schema": {
+                                "$ref": "#/definitions/Car"
+                            }
+                        }
+                    }
+                },
+                "responses": {
+                    "201": {
+                        "description": "Created"
+                    },
+                    "400": {
+                        "description": "Car already exists!"
+                    }
+                }
+            }
+        },
+        "/cars/images/{id}": {
+            "post": {
+                "tags": ["Cars"],
+                "summary": "Upload images",
+                "description": "Upload images",
+                "security": [{ "bearerAuth": [] }],
+                "parameters": [
+                    {
+                        "name": "id",
+                        "in": "path",
+                        "description": "Car id",
+                        "required": true,
+                        "schema": {
+                            "type": "string"
+                        }
+                    }
+                ],
+                "requestBody": {
+                    "content": {
+                        "multipart/form-data": {
+                            "schema": {
+                                "type": "object",
+                                "properties": {
+                                    "images": {
+                                        "type": "array",
+                                        "items": {
+                                            "type": "string",
+                                            "format": "binary"
+                                        }
+                                    }
+                                }
+                            }
+                        }
+                    }
+                },
+                "responses": {
+                    "201": {
+                        "description": "Created"
+                    }
+                }
+            }
         }
     },
     "definitions": {
@@ -143,6 +237,41 @@
                 "description": {
                     "type": "string"
                 }
+            }
+        },
+        "Car": {
+            "type": "object",
+            "properties": {
+                "name": {
+                    "type": "string"
+                },
+                "description": {
+                    "type": "string"
+                },
+                "daily_rate": {
+                    "type": "number"
+                },
+                "license_plate": {
+                    "type": "string"
+                },
+                "fine_amount": {
+                    "type": "number"
+                },
+                "brand": {
+                    "type": "string"
+                },
+                "category_id": {
+                    "type": "string"
+                }
+            }
+        }
+    },
+    "components": {
+        "securitySchemes": {
+            "bearerAuth": {
+                "type": "http",
+                "scheme": "bearer",
+                "bearerFormat": "JWT"
             }
         }
     }
